--- a/my_app/public/index.html
+++ b/my_app/public/index.html
@@ -29,6 +29,12 @@
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
+    <br/>
+    <div id="calculator"></div>
+    <br/>
+    <div id="signup"></div>
+    <br/>
+    <div id="container"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
