--- a/my_app/public/index.html
+++ b/my_app/public/index.html
@@ -35,6 +35,8 @@
     <div id="signup"></div>
     <br/>
     <div id="container"></div>
+    <br/>
+    <div id="game"></div>
     <!--
       This HTML file is a template.
       If you open it directly in the browser, you will see an empty page.
